# mephi_labs_2

./: .gitlab-ci.yml  README.md
atomic/shared_mutex/: CMakeLists.txt  check.sh  main  main.cpp  makefile  readme.md  task.h
basic_threads/list/: .gitignore  CMakeLists.txt  main.cpp  readme.md  task.h  taskopy.h
basic_threads/primes/: CMakeLists.txt  main  main.cpp  readme.md  task.cpp  task.h
condition_variables/unbuffered_channel/: main  main.cpp  readme.md  task.h
extra_tasks_1/thread_pool/: main  main.cpp  task.h
project-part-1/socket/: CMakeLists.txt  TreadPool.h  main  main.cpp
project-part-1/test/: CMakeLists.txt  Makefile  main  main.cpp  parser.h
project-part-1/torrent-file/: CMakeLists.txt  main.cpp  parser.h  readme.md  task.h  testscript.py
project-part-1/torrent-file/resources/: ah.torrent
project-part-2/peers-request/: BencodeHash.h  CMakeLists.txt  Makefile  TorrentFileParser.h  bencodeParser.h  check_peers.h  getInfoHash.h  main.cpp  readme.md  responsePeersParser.h  task.h  torrent_file.h
project-part-3/socket-connect/: CMakeLists.txt  Makefile  bencode.cpp  byte_tools.cpp  byte_tools.h  check_peers.h  main.cpp  message.cpp  message.h  readme.md  tcp_connect.cpp  tcp_connect.h  torrent_file.cpp
project-part-4/handshake/: CMakeLists.txt  Makefile  bencode.h  byte_tools.cpp  byte_tools.h  check_peers.h  main.cpp  message.h  peer_connect.cpp  peer_connect.h  readme.md  tcp_connect.cpp  torrent_file.cpp
project-part-5/download_pieces/: CMakeLists.txt  Makefile  bencode.cpp  bencode.h  byte_tools.cpp  check_peers.h  main.cpp  message.cpp  message.h  peer_connect.cpp  peer_connect.h  piece.cpp  piece_storage.cpp  piece_storage.h  readme.md  tcp_connect.h  torrent_tracker.cpp
project-part-6/download_file/: Makefile  byte_tools.cpp  byte_tools.h  main.cpp  piece.h  (+8 more)
(+25 files in other folders)
